<resources>
    <string name="app_name">Inventory App</string>
    <string name="action_settings">Settings</string>

    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <string name="empty_view_subtitle_text">Get started by adding an item</string>
    <string name="title_activity_editor">EditorActivity</string>
    <string name="category_overview">Overview</string>
    <string name="hint_item_name">Item Name</string>
    <string name="hint_number_of_items">Number of Items</string>
    <string name="price_per_item">Price</string>
    <string name="currency">$</string>
    <string name="hint_item_price">Price Pet Item</string>
    <string name="order">Order</string>
    <string name="delete">Delete</string>
    <string name="sell">Sell</string>
    <string name="save">Save</string>
    <string name="editor_insert_item_failed">Item failed to insert.</string>
    <string name="editor_insert_item_successful">Item was successfully inserted.</string>
    <string name="editor_update_item_failed">Edit for this item failed.</string>
    <string name="editor_update_item_successful">This item was sucessfully updated.</string>
    <string name="out_of_stock">This item is out of stock.</string>
    <string name="editor_delete_item_failed">Deletion for this item failed.</string>
    <string name="editor_delete_item_successful">This item was successfully deleted.</string>
    <string name="delete_dialog_msg">Are you sure you want to delete this item?</string>
    <string name="cancel">Cancel</string>
    <string name="number_of_items">Number of Items</string>
    <string name="cannot_decrease">Item value can\'t be less than 0.</string>
    <string name="unsaved_changes_dialog_msg">There are some unsaved changes.</string>
    <string name="discard">Discard changes</string>
    <string name="keep_editing">Keep editing</string>
    <string name="supplier">Supllier</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_email">Supplier E-Mail</string>
</resources>
